[gd_scene load_steps=3 format=2]

[ext_resource path="res://island/StrandEntry/StrandEntry.gd" type="Script" id=1]
[ext_resource path="res://theme/default_theme.tres" type="Theme" id=2]

[node name="Strand1" type="HBoxContainer"]
margin_right = 422.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
alignment = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Open" type="Button" parent="."]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 300, 0 )
theme = ExtResource( 2 )
text = "Strand 1"

[node name="Rename" type="Button" parent="."]
margin_left = 304.0
margin_right = 390.0
margin_bottom = 50.0
theme = ExtResource( 2 )
text = "Rename"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_left = 394.0
margin_right = 453.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
theme = ExtResource( 2 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Open" to="." method="_on_Open_pressed"]
[connection signal="pressed" from="Rename" to="." method="_on_Rename_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
